public/css/main.css
body {
    background-image: url("../img/low_contrast_linen_white.png");
}

div#main-container {
    display: flex;
    flex-direction: column;
    margin-bottom: 40px;
}

button.navbar-toggle {
    position: absolute;
    right: 0;
}

.navbar-header {
    display: inline-block !important;
    vertical-align: top;
}

.navbar .navbar-nav {
    display: inline-block;
    float: right;
    vertical-align: top;
}

.navbar .navbar-collapse {
    text-align: center;
}

div#controllers {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    margin-bottom: 15px;
}

div#controllers div#create-application,
div#controllers div#create-contact,
div#order-by {
    margin-right: 15px;
}

form {
    background-color: rgb(246, 246, 246);
    border: 1px solid lightgray;
    border-radius: 5px;
}

div.application form,
div#application form,
div.contact form,
div#contact form {
    box-shadow: 1px 2px 3px #111;
}

div.modal-header {
    background-color: #6B7C84;
    color: white;
}

div#contact-modal-presentation form,
div#contact-modal-create form {
    border: 0;
    border-radius: 0;
}

div.application-list form,
div.contact-list form {
    border: none;
    border-radius: 0;
}

a.application-order-link,
a.contact-order-link {
    text-decoration: underline;
}

div.application-list div.application-start,
div.contact-list div.contact-start {
    display: flex;
    margin-bottom: 6px;
    padding: 2px 4px;
    align-items: center;
}

div.application .overdue-date,
div.application-list .overdue-date {
//    background-color: rgba(214, 99, 83, 0.92);
//    color: #dee;
}

div.application-list-dates,
div.contact-list-address {
    display: flex;
    align-items: center;
}

div.application-list-date {
    text-align: center;
}

div.application-list input[type="date"] {
    text-align: center;
}

div.application-list > div:first-child,
div.contact-list > div:first-child {
    padding: 10px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    background-color: #6B7C84;
    border-bottom: 1px solid #666;
}

div.application-list > div:first-child a,
div.contact-list > div:first-child a,
div.contact-list > div:first-child {
    color: white;
}

div.application-bottom,
div.contact-bottom {
    padding: 10px;
}

div.application-list-end-holder,
div.contact-list-end-holder {
    display: flex;
    align-items: center;
}

label {
    font-weight: normal;
    margin-left: 12px;
}

ul li a:hover {
    cursor: pointer;
    text-decoration: underline;
}

div.form-controls {
    text-align: right;
}

div.form-controls a.cancel-item,
div.form-controls a#exit-modal {
    margin-right: 20px;
}

textarea {
    resize: none;
}

div#missing-entries {
    text-align: center;
}

.ui-datepicker {
    background-color: #fff;
    border: 1px solid #66AFE9;
    border-radius: 4px;
    box-shadow: 0 0 8px rgba(102,175,233,.6);
    display: none;
    margin-top: 4px;
    padding: 10px;
    width: 240px;
}

.ui-datepicker a,
.ui-datepicker a:hover {
    text-decoration: none;
}

.ui-datepicker a:hover,
.ui-datepicker td:hover a {
    color: #2A6496;
    -webkit-transition: color 0.1s ease-in-out;
    -moz-transition: color 0.1s ease-in-out;
    -o-transition: color 0.1s ease-in-out;
    transition: color 0.1s ease-in-out;
}

.ui-datepicker .ui-datepicker-header {
    margin-bottom: 4px;
    text-align: center;
}

.ui-datepicker .ui-datepicker-title {
    font-weight: 700;
}

.ui-datepicker .ui-datepicker-prev,
.ui-datepicker .ui-datepicker-next {
    cursor: default;
    font-family: 'Glyphicons Halflings';
    -webkit-font-smoothing: antialiased;
    font-style: normal;
    font-weight: normal;
    height: 20px;
    line-height: 1;
    margin-top: 2px;
    width: 30px;
}

.ui-datepicker .ui-datepicker-prev {
    display: flex;
    justify-content: center;
    align-items: center;
    float: left;
    text-align: center;
}
.ui-datepicker .ui-datepicker-next {
    display: flex;
    justify-content: center;
    align-items: center;
    float: right;
    text-align: center;
}

.ui-datepicker .ui-datepicker-prev:before {
    content: "\e079";
}

.ui-datepicker .ui-datepicker-next:before {
    content: "\e080";
}

.ui-datepicker .ui-icon {
    display: none;
}

.ui-datepicker .ui-datepicker-calendar {
    table-layout: fixed;
    width: 100%;
}

.ui-datepicker .ui-datepicker-calendar th,
.ui-datepicker .ui-datepicker-calendar td {
    text-align: center;
    padding: 4px 0;
}

.ui-datepicker .ui-datepicker-calendar td {
    border-radius: 4px;
    -webkit-transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out;
    -moz-transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out;
    -o-transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out;
    transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out;
}

.ui-datepicker .ui-datepicker-calendar td:hover {
    background-color: #eee;
    cursor: pointer;
}

.ui-datepicker .ui-datepicker-calendar td a {
    text-decoration: none;
}

.ui-datepicker .ui-datepicker-current-day {
    background-color: #4289cc;
}

.ui-datepicker .ui-datepicker-current-day a {
    color: #000;
}

.ui-datepicker .ui-datepicker-calendar .ui-datepicker-unselectable:hover {
    background-color: #fff;
    cursor: default;
}

button.delete-item,
a.delete-item {
    background-color: #d9534f;
}

button.save-item,
a.save-item {
    background-color: #5cb85c;
}

button.edit-item,
a.edit-item,
button.cancel-item,
a.cancel-item {
    background-color: #f0ad4e;
}

@media(max-width:767px) {
    label.vertical {
        display: none;
    }

    div.application-applied div:nth-child(2),
    div.application-due-date div:nth-child(2),
    div.application-follow-up div:nth-child(2) {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
    }

    div.application-applied input,
    div.application-due-date input,
    div.application-follow-up input {
        text-align: center;
        max-width: 150px;
    }

}

@media(min-width: 768px) and (max-width: 991px) {
    label.horizontal {
        display: none;
    }

    form {
        background-color: green;
    }
}

@media(min-width: 992px) and (max-width: 1199px) {
    div.application-applied div:nth-child(2),
    div.application-due-date div:nth-child(2),
    div.application-follow-up div:nth-child(2) {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;

        display: -webkit-flex;
        -webkit-flex-direction: row;
        -webkit-justify-content: space-between;
        -webkit-align-items: center;
    }

    label.vertical {
        visibility: hidden;
    }

    div.application-applied input,
    div.application-due-date input,
    div.application-follow-up input {
        max-width: 100px;
    }

}

@media(min-width:1200px) {

    div.application-applied div:nth-child(2),
    div.application-due-date div:nth-child(2),
    div.application-follow-up div:nth-child(2) {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
    }

    body#application div.application-right input[type="text"] {
        text-align: center;
    }

    div.application input[type="date"] {
        text-align: center;
    }

    label.vertical {
        visibility: hidden;
    }

    div.application-applied input,
    div.application-due-date input,
    div.application-follow-up input {
        max-width: 150px;
    }

}

